# CleanUpStorages

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: LICENSES.md
docs/: TESTING-GUIDE.md  ai-sdlc.md  benchmarking-scans.md  future-ideas.md
docs/design/: stitch-prompt.md
docs/superpowers/plans/: 2026-07-04-phase1a-catalog-scanner-search.md  2026-07-04-phase1b-recursive-archives.md  2026-07-04-phase1c-web-browse.md  2026-07-04-phase2a-quarantine-purge.md  2026-07-05-phase2b-review-gui.md  2026-07-05-phase2c-archive-repack.md  2026-07-07-observability.md  2026-07-07-web-scanning.md  2026-07-10-posd-refactor.md  2026-07-10-ui-integration.md  2026-07-11-browse-tree.md  2026-07-12-drives-fix-and-rename.md  2026-07-12-visual-overhaul.md  2026-07-16-publish-and-collaboration.md  2026-07-17-release-automation.md  2026-07-22-duplicate-review-scale.md  2026-07-22-scan-instrumentation.md
docs/superpowers/specs/: 2026-07-04-cleanupstorages-design.md  2026-07-07-observability-design.md  2026-07-07-web-scanning-design.md  2026-07-10-posd-refactor-design.md  2026-07-10-ui-integration-design.md  2026-07-11-browse-tree-design.md  2026-07-12-drives-fix-and-rename-design.md  2026-07-12-visual-overhaul-design.md  2026-07-16-publish-and-collaboration-design.md  2026-07-17-release-automation-design.md  2026-07-22-duplicate-review-scale-design.md  2026-07-22-scan-instrumentation-design.md
scripts/: make-test-sandbox.ps1
src/: archive.rs  category.rs  commands.rs  config.rs  hashing.rs  image_preview.rs  lib.rs  main.rs  mounts.rs  observability.rs  purge.rs  quarantine.rs  repack.rs  scan_metrics.rs  scan_queue.rs  scanner.rs  verify.rs  volume.rs  web.rs  web_ui.rs
src/catalog/: backup.rs  dedup.rs  mod.rs  models.rs  scan_runs.rs  schema.rs  store.rs
tests/: archive_scan.rs  browse_server.rs  forget_cli.rs  quarantine_flow.rs  rename_cli.rs  repack_flow.rs  review_flow.rs  scan_and_search.rs  web_scan_flow.rs
