[package]
name = "cleanupstorages"
version = "0.1.0"
edition = "2021"
description = "Reliable catalog + deduplication tool for messy external drives"

[[bin]]
name = "cleanupstorages"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
blake3 = "1"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
sysinfo = "0.30"
anyhow = "1"
thiserror = "1"
zip = "2"
image = "0.25"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
