[package]
name = "cleanupstorages"
version = "0.1.0"
edition = "2021"
description = "Reliable catalog + deduplication tool for messy external drives"
license = "AGPL-3.0-only"
repository = "https://github.com/justPrototypeGit/CleanUpStorages"
readme = "README.md"
keywords = ["deduplication", "catalog", "backup", "storage", "blake3"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "cleanupstorages"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
blake3 = "1"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
sysinfo = "0.30"
anyhow = "1"
thiserror = "1"
zip = "2"
image = "0.25"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "time"] }
rfd = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }

# Windows-only: crisp (DPI-aware) native folder dialog, owned by the foreground window and
# re-centered on the monitor once it appears.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }
raw-window-handle = "0.6"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
